<resources>
    <string name="app_name">AppTourDuLich</string>
    <string name="nameload">HouseTour</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_usename">Số Điện Thoại</string>
    <string name="prompt_password">Mật Khẩu</string>
    <string name="otp">Mã OTP</string>
    <string name="dangnhap">Đăng Nhập</string>
    <string name="dangki">Đăng Kí</string>
    <string name="quenmatkhau">Quên Mật Khẩu</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="Nhaplaimatkhau">Nhập Lại Mật Khẩu</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hoten">Họ Tên</string>
    <string name="diachi">Địa Chỉ</string>
    <string name="guilaimaotp">Gửi lại mã</string>
    <string name="Confirm">Xác Nhận</string>
    <string name="start">Bắt Đầu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook">Đăng Nhập Facebook</string>
    <string name="Copy">Sao Chép</string>
    <string name="Gmail">
        Gmail</string>
    <string name="DatVe">Đặt Vé</string>
    <string name="InfoTour">Thông Tin</string>
    <string name="details">Mô Tả</string>
    <string name="Contact">Liên Hệ</string>
    <string name="addressContact">828 Sư Vạn Hạnh, phường 13, Quận 10, Hồ Chí Minh</string>
    <string name="HotlineContact">01254621321</string>
    <string name="EmailContact">HouseTour@gmail.com</string>
    <string name="infoContact">House Tour</string>
    <string name="ContactByPhone">Tư Vấn Qua Điện Thoại</string>
<string name="ThongBao">Thông Báo</string>
    <string name="CCCD">CMNN/CCCD</string>
    <string name="update">Cập Nhật
    </string>
    <string name="phone">Số Điện Thoại </string>
    <string name="Login">Đăng Nhập</string>
    <string name="Register">Đăng Kí</string>
    <string name="Birthday">Ngày Sinh</string>
    <string name="sloganstart1.2">Chào mừng bạn đến với du lịch Việt Nam. Vác balo lên và đánh dấu lại những dấu chân .</string>
    <string name="sloganstart2"> Mỗi hành trình đều có những điểm đến bí mật mà ngay cả du khách cũng không thể ngờ tới.</string>
    <string name="sloganstart3">Hãy để chúng tôi mang đến cho bạn tuyệt vời nhất !</string>
    <string name="feedback">Góp Ý</string>
    <string name="title_activity_profile">Profile</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sex">Giới Tính</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="facebook_app_id">498471527958027</string>
    <string name="fb_login_protocol_scheme">fb498471527958027</string>
    <string name="Loginwithfacebook">Đăng Nhập với Facebook</string>
    <string name="Boy">Nam</string>
    <string name="Girl">Nữ</string>
    <string name="PhoneNumber">Số Điện Thoại</string>
    <string name="inputOTP">Vui lòng nhập mã OTP được gửi đến </string>
    <string name="youhaveaccount">Bạn đã có tài khoản chưa?</string>
    <string name="title_activity_home__screen">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home_screen">MainActivity</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="Tour">Tour</string>
    <string name="Home">Trang Chủ</string>
    <string name="Location">Vị Trí</string>
    <string name="Promotion">Ưu Đãi</string>
    <string name="Profile">Cá Nhân</string>
    <string name="Haytanhuong">Tận hưởng cuộc sống</string>
    <string name="vedepbattan">Vẻ Đẹp Bất Tận</string>
    <string name="vedeptieman">Vẻ Đẹp Tiềm Ẩn</string>
    <string name="Search">Tìm Kiếm</string>
    <string name="or">Hoặc</string>
    <string name="ListTour">Danh Sách Tour</string>
    <string name="ViewAll">Xem tất cả</string>
    <string name="News">Tin Tức</string>
    <string name="All">Tất Cả</string>
    <string name="South">Miền Nam</string>
    <string name="North">Miền Bắc</string>
    <string name="Central">Miền Trung</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Rules">Điều Khoản</string>
    <string name="DetailRules1"> 1. Bạn cam kết và đảm bảo rằng bạn là một cá nhân về mặt pháp lý có toàn quyền tham gia giao kết thỏa thuận theo pháp luật nước Cộng hòa xã hội chủ nghĩa Việt Nam.</string>
    <string name="DetailRules2"> 2. Chúng tôi thu thập và xử lý các thông tin của bạn, như là tên, địa chỉ, số điện thoại khi bạn đăng ký. Bạn phải cung cấp chính xác và đầy đủ thông tin, cập nhật thông tin và đồng ý cung cấp cho chúng tôi bất kỳ bằng chứng nào về danh tính theo yêu cầu hợp lý của chúng tôi. </string>
    <string name="DetailRules3"> 3. Nếu các thông tin mà bạn cung cấp cho chúng tôi thay đổi, ví dụ, nếu bạn thay đổi địa chỉ email, hoặc nếu bạn muốn hủy tài khoản, xin vui lòng cập nhật chi tiết bằng cách gửi yêu cầu đến chúng tôi. Chúng tôi, trong khả năng của mình, sẽ nỗ lực thực hiện thay đổi theo yêu cầu trong ba mươi (30) ngày làm việc kể từ khi nhận được thông báo về thay đổi.</string>
    <string name="DetailRules4"> 4. Bạn có thể chọn mua một phần hoặc toàn bộ các nội dung của Ứng dụng bằng cách thanh toán cho chúng tôi.</string>
    <string name="DetailRules6">6. Người từ 11 tuổi trở lên sẽ tính vé bình thường. Phụ thu vé trẻ em từ 2 tuổi đến 11 tuổi sẽ tính bằng 50% vé và trẻ em dưới 2 tuổi sẽ được miễn phí. </string>
    <string name="DetailRules5">5.  Bạn chỉ có thể hủy tour không quá 3 ngày sau khi đặt tour và trước khi khởi hành 7 ngày.</string>
    <string name="DetailRules7">7. Số lượng đặt tour phải lớn hơn 0 và không quá 30 vé cho từng đối tượng.</string>
    <string name="close">Đóng</string>
    <string name="title_activity_infor_tour">InforTour</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_info_tour">MainActivity</string>
    <string name="NgayKhoiHanh">Ngày Khởi Hành:</string>
    <string name="NgayKetThuc">Ngày Kết Thúc:</string>
    <string name="Khachsan">Khách Sạn:</string>
    <string name="CMNN">CMNN/CCCD:</string>
    <string name="GiaVe">Giá Vé:</string>
    <string name="NoiKhoiHanh">Nơi Khởi Hành:</string>
    <string name="HoaDon">Hóa Đơn</string>
    <string name="SoNgay">Số Ngày:</string>
    <string name="ThongTinKhachHang">Thông Tin Khách Hàng</string>
    <string name="ThongTinTour">Thông Tin Tour</string>
    <string name="KhuyenMai">Khuyến Mãi</string>
    <string name="ApDung">Áp Dụng</string>
    <string name="ThongTinThanhToan">Thông Tin Thanh Toán</string>
    <string name="TenTour">Tên Tour:</string>
    <string name="ChietKhau">Chiết Khấu:</string>
    <string name="SoTienThanhToan">Số Tiền Thanh Toán:</string>
    <string name="PhuongThucThanhToan">Phương Thức Thanh Toán:</string>
    <string name="PhuongTien">Phương Tiện:</string>
    <string name="NguoiLon">Người Lớn:</string>
    <string name="TreEm">Trẻ Em:</string>
    <string name="SoTien">Số Tiền:</string>
    <string name="ThanhToan">Thanh Toán</string>
    <string name="diachi1">Địa Chỉ:</string>
    <string name="LichSu">Lịch Sử Thanh Toán</string>
    <string name="YeuThich">Yêu Thích</string>
    <string name="dathich">Đã thích</string>
    <string name="dieukhoan">Điều khoản</string>
    <string name="ngonngu">Ngôn ngữ</string>
    <string name="lichsu">Lịch sử</string>
    <string name="lienhe">Liên hệ</string>
    <string name="thongtincanhan">Thông tin cá nhân ></string>
    <string name="haychonngonngu">Chọn ngôn ngữ</string>
    <string name="GuiLaiMa">Gửi lại</string>
    <string name="housetour">House Tour</string>
    <string name="NoInterNetConnection">Không Có Kết Nối Internet</string>
    <string name="PleaseCheckYourConnection">Vui Lòng Kiểm Tra Kết Nối Internet</string>
    <string name="Retry">Thử Lại</string>
    <string name="LogOut">Đăng Xuất</string>
    <string name="listlike">Danh Sách Yêu Thích</string>
    <string name="HuyTour">Hủy Tour</string>
    <string name="ChiTietLichSu">Chi Tiết Lịch Sử</string>
    <string name="NgayDiHis">Ngày đi:</string>
    <string name="NgayThanhtoanHis">Ngày thanh toán:</string>
    <string name="luuy">Lưu ý: Quý khách chỉ được hủy Tour sau khi thanh Toán trong vòng 3 ngày.</string>
<string name="DiaDiemDuLich">Địa Điểm Du Lịch</string>
</resources>