<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_tour"
        android:icon="@drawable/ic_baseline_event_note_24"
        android:title="@string/Tour" />

    <item
        android:id="@+id/navigation_promo"
        android:icon="@drawable/ic_baseline_style_24"
        android:title="@string/Promotion" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/Home" />

    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/Location" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/Profile" />
</menu>