<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nendangnhapdangky"
    tools:context=".Rules">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="256dp"
        android:layout_height="82dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/Rules"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="346dp"
        android:layout_height="523dp"
        android:foregroundGravity="center"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <ScrollView
            android:layout_width="324dp"
            android:layout_height="454dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DetailRules1"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DetailRules2"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DetailRules3"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DetailRules4"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DetailRules5"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnDangXuat"
        android:layout_width="119dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="#0097A7"
        android:text="@string/close"
        android:textSize="18sp"
        app:backgroundTint="#0097A7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />
</androidx.constraintlayout.widget.ConstraintLayout>