<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundload"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        app:srcCompat="@drawable/no_wifi" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/NoInterNetConnection"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/PleaseCheckYourConnection"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnRetry"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:text="@string/Retry"
        app:backgroundTint="@color/light_blue_900" />

</LinearLayout>